2005-11-24  Senganal T  <tsenganal@novell.com>

	* Tds.cs 
	* Tds70.cs : 
		- Modifications to set the desired packetsize info when connecting
		to database

2005-11-23  Senganal T  <tsenganal@novell.com>
	
	* TdsComm.cs : 
		- ResizeOutBuf : Modified to shrink the output buffer if
		the block size is reduced. Fixed bug #76778 	

2005-10-27  Senganal T  <tsenganal@novell.com>
	
	* Tds.cs :
		- Added a virtual method IsValidRowCount ()
		- Modified the way RecordsAffected is being counted

	* Tds70.cs :
		- Overrode IsValidRowCount(), to check if the rowcount
		returned by sqlserver is valid.

2005-10-19  Senganal T  <tsenganal@novell.com>

	* TdsConnectionParameter.cs :
		- Added a class variable 'AttachDBFileName' to store the location
		of the DB file.

	* Tds70.cs (Connect) :
		- Modified to append the bytes corresponding to AttachDBFileName 
		into the Tds Packets. 

2005-08-26  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs (ExecProc): if no parameters, execute via RPC. parameter
	support has to be added.

	* Tds.cs (ExecRPC): added virtual method to execute via RPC.

	This fixes bug #68978 by enabling execution of sp_reset_connection.

2005-08-24  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds.cs: ProcessColumnDetail (): expression columns don't have
	baseTableName.

2005-08-05  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs: Reset (): remove exec.

2005-07-01  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs: FormatParameter: For uniqueidentifier, pass the guid
	as '..' rather than hex. Tested with SqlServer 2005.

	patch from jsinger@eggmouse.com & Hubert FONGARNAND.

2005-06-29  Sureshkumar T  <tsureshkumar@novell.com>

	* TdsInternalException.cs: Add ctor for InnerException.

	* TdsComm.cs: Throw TdsInternalException rather than
	SocketException.

2005-06-01  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds50.cs: add a special case for datetime parameters to convert
	to invariant culture. fixes bug #74910.
